--- a/source/blocks/header/header.css
+++ b/source/blocks/header/header.css
@@ -2,17 +2,15 @@
 {
 	width: 100%;
 	padding-top: 32px;
-	padding-bottom: 32px;
+	padding-bottom: 20px;
 
 	@media (--tablet)
 	{
 		padding-top: 26px;
-		padding-bottom: 26px;
 	}
 
 	@media (--mobile)
 	{
 		padding-top: 20px;
-		padding-bottom: 20px;
 	}
 }
