--- a/source/blocks/logo/logo.css
+++ b/source/blocks/logo/logo.css
@@ -1,5 +1,6 @@
 .logo
 {
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	font-size: 64px;
 	line-height: 1;
 
@@ -10,6 +11,6 @@
 
 	@media (--mobile)
 	{
-		font-size: 40px;
+		font-size: 36px;
 	}
 }
