--- a/source/styles/config.css
+++ b/source/styles/config.css
@@ -4,7 +4,7 @@
 	--site-padding: 20px;
 	--site-background-color: #fff;
 
-	--base-fonts-set: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	--base-fonts-set: Arial, Helvetica, sans-serif;
 	--base-font-size: 16px;
 	--base-line-height: 1.2;
 
